# cmpe275-projects

./: .gitignore  README.md  network_config.txt
mini1/: .gitignore  (+1 more)
mini1/code/: AirQualityDataManager.cpp  AirQualityDataManager.h  AirQualityDataManager.hpp  AirQualityReading.h  CMakeLists.txt  main.cpp  parallel_benchmark.cpp
mini1/code/2020-fire/: AirQualityDataManager.cpp  CMakeLists.txt
mini1/code/2020-fire/include/: AirQualityDataManager.hpp
mini1/code/2020-fire/tests/: main.cpp  parallel_benchmark.cpp
mini1/code/utils/: BenchMarkTimer.hpp  CSVParser.cpp
mini1/code/worldbank/: CMakeLists.txt  PopulationDataManager.cpp  PopulationDataManagerHash.cpp  PopulationDataManagerMap.cpp
mini1/code/worldbank/commons/: WorldBankCSVLoader.cpp
mini1/code/worldbank/include/: PopulationDTO.hpp  PopulationDataManager.hpp  PopulationDataManagerHash.hpp  PopulationDataManagerMap.hpp  WorldBankCSVLoader.hpp
mini1/code/worldbank/tests/: test_basic.cpp  test_comparison.cpp  test_threading.cpp
mini2/: .gitignore  CMakeLists.txt  README.md  generate_data.py  mini2-chunks.md  network_config.txt  requirements.txt  test_person1.sh  test_person1_complete.sh
mini2/data/air_quality/20200801/: 20200801-00.csv  20200801-01.csv  20200801-02.csv  20200801-03.csv  20200801-04.csv  20200801-05.csv  20200801-06.csv  20200801-07.csv  20200801-08.csv  20200801-09.csv  20200801-10.csv  20200801-11.csv  20200801-12.csv  20200801-13.csv  20200801-14.csv  20200801-15.csv  20200801-16.csv  20200801-17.csv  20200801-18.csv  20200801-19.csv  20200801-20.csv  20200801-21.csv  20200801-22.csv  20200801-23.csv
mini2/data/air_quality/20200802/: 20200802-00.csv  20200802-01.csv  20200802-02.csv  20200802-03.csv  20200802-04.csv  20200802-05.csv  20200802-06.csv  20200802-07.csv  20200802-08.csv  20200802-09.csv  20200802-10.csv  20200802-11.csv  20200802-12.csv  20200802-13.csv  20200802-14.csv  20200802-15.csv  20200802-16.csv  20200802-17.csv  20200802-18.csv  20200802-19.csv  20200802-20.csv  20200802-21.csv  20200802-22.csv  20200802-23.csv
mini2/data/air_quality/20200803/: 20200803-00.csv  20200803-01.csv  20200803-02.csv  20200803-03.csv  20200803-04.csv  20200803-05.csv  20200803-06.csv  20200803-07.csv  20200803-08.csv  20200803-09.csv  20200803-10.csv  20200803-11.csv  20200803-12.csv  20200803-13.csv  20200803-14.csv  20200803-15.csv  20200803-16.csv  20200803-17.csv  20200803-18.csv  20200803-19.csv  20200803-20.csv  20200803-21.csv  20200803-22.csv  20200803-23.csv
mini2/data/air_quality/20200804/: 20200804-00.csv  20200804-01.csv  20200804-02.csv  20200804-03.csv  20200804-04.csv  20200804-05.csv  20200804-06.csv  20200804-07.csv  20200804-08.csv  20200804-09.csv  20200804-10.csv  20200804-11.csv  20200804-12.csv  20200804-13.csv  20200804-14.csv  20200804-15.csv  20200804-16.csv  20200804-17.csv  20200804-18.csv  20200804-19.csv  20200804-20.csv  20200804-21.csv  20200804-22.csv  20200804-23.csv
mini2/data/air_quality/20200805/: 20200805-00.csv  20200805-01.csv  20200805-02.csv  20200805-03.csv  20200805-04.csv  20200805-05.csv  20200805-06.csv  20200805-07.csv  20200805-08.csv  20200805-09.csv  20200805-10.csv  20200805-11.csv  20200805-12.csv  20200805-13.csv  20200805-14.csv  20200805-15.csv  20200805-16.csv  20200805-17.csv  20200805-18.csv  20200805-19.csv  20200805-20.csv  20200805-21.csv  20200805-22.csv  20200805-23.csv
mini2/data/air_quality/20200806/: 20200806-00.csv  20200806-01.csv  20200806-02.csv  20200806-03.csv  20200806-04.csv  20200806-05.csv  20200806-06.csv  20200806-07.csv  20200806-08.csv  20200806-09.csv  20200806-10.csv  20200806-11.csv  20200806-12.csv  20200806-13.csv  20200806-14.csv  20200806-15.csv  20200806-16.csv  20200806-17.csv  20200806-18.csv  20200806-19.csv  20200806-20.csv  20200806-21.csv  20200806-22.csv  20200806-23.csv
mini2/data/air_quality/20200807/: 20200807-00.csv  20200807-01.csv  20200807-02.csv  20200807-03.csv  20200807-04.csv  20200807-05.csv  20200807-06.csv  20200807-07.csv  20200807-08.csv  20200807-09.csv  20200807-10.csv  20200807-11.csv  20200807-12.csv  20200807-13.csv  20200807-14.csv  20200807-15.csv  20200807-16.csv  20200807-17.csv  20200807-18.csv  20200807-19.csv  20200807-20.csv  20200807-21.csv  20200807-22.csv  20200807-23.csv
mini2/data/air_quality/20200808/: 20200808-00.csv  20200808-01.csv  20200808-02.csv  20200808-03.csv  20200808-04.csv  20200808-05.csv  20200808-06.csv  20200808-07.csv  20200808-08.csv  20200808-09.csv  20200808-10.csv  20200808-11.csv  20200808-12.csv  20200808-13.csv  20200808-14.csv  20200808-15.csv  20200808-16.csv  20200808-17.csv  20200808-18.csv  20200808-19.csv  20200808-20.csv  20200808-21.csv  20200808-22.csv  20200808-23.csv
mini2/data/air_quality/20200809/: 20200809-00.csv  20200809-01.csv  20200809-02.csv  20200809-03.csv  20200809-04.csv  20200809-05.csv  20200809-06.csv  20200809-07.csv  20200809-08.csv  20200809-09.csv  20200809-10.csv  20200809-11.csv  20200809-12.csv  20200809-13.csv  20200809-14.csv  20200809-15.csv  20200809-16.csv  20200809-17.csv  20200809-18.csv  20200809-19.csv  20200809-20.csv  20200809-21.csv  20200809-22.csv  20200809-23.csv
mini2/data/air_quality/20200810/: 20200810-00.csv  20200810-01.csv  20200810-02.csv  20200810-03.csv  20200810-04.csv  20200810-05.csv  20200810-06.csv  20200810-07.csv  20200810-08.csv  20200810-09.csv  20200810-10.csv  20200810-11.csv  20200810-12.csv  20200810-13.csv  20200810-14.csv  20200810-15.csv  20200810-16.csv  20200810-17.csv  20200810-18.csv  20200810-19.csv  20200810-20.csv  20200810-21.csv  20200810-22.csv  20200810-23.csv
mini2/include/: AirQualityReading.hpp  CSVParser.hpp  CommonUtils.hpp  SessionManager.hpp
mini2/protos/: dataserver.proto  test.proto
mini2/src/: AirQualityDataManager.cpp  CacheManager.hpp  client.cpp  server_a.cpp  server_b.cpp  server_c.cpp  server_d.cpp  server_d.py  server_e.cpp  server_f.py
mini2/src/python/: __init__.py  common_utils.py  server_d.py  server_f.py
mini2/utils/: AirQualityDataManager.cpp  BenchMarkTimer.cpp  BenchMarkTimer.hpp  CSVParser.cpp  CSVParser.hpp
(+1224 files in other folders)
